syntax = "proto3";
package reqresp.pb;

option go_package = "github.com/ipni/storetheindex/api/v0/finder/pb";

message FinderMessage {
  enum MessageType {
    ERROR_RESPONSE = 0;
    FIND = 1;
    FIND_RESPONSE = 2;
    LIST_PROVIDERS = 3;
    LIST_PROVIDERS_RESPONSE = 4;
    GET_PROVIDER = 5;
    GET_PROVIDER_RESPONSE = 6;
    GET_STATS = 7;
    GET_STATS_RESPONSE = 8;
  }

  // defines what type of message it is.
  MessageType type = 1;

  // Value for the message
  bytes data = 2;
}
